Fix tooltips and dropdown not being clickable when in list